@@ -146,11 +146,16 @@ $redirect_url = 'webmail.php';
 
 if ( sqgetGlobalVar('session_expired_location', $session_expired_location, SQ_SESSION) ) {
     sqsession_unregister('session_expired_location');
-    $compose_new_win = getPref($data_dir, $username, 'compose_new_win', 0);
-    if ($compose_new_win) {
-        $redirect_url = $session_expired_location;
-    } elseif ( strpos($session_expired_location, 'webmail.php') === FALSE ) {
-        $redirect_url = 'webmail.php?right_frame='.urldecode($session_expired_location);
+    $session_expired_location = urldecode($session_expired_location);
+    if ( strpos($session_expired_location, 'compose.php') !== FALSE ) {
+        $compose_new_win = getPref($data_dir, $username, 'compose_new_win', 0);
+        if ($compose_new_win) {
+            $redirect_url = $session_expired_location;
+        } elseif ( strpos($session_expired_location, 'webmail.php') === FALSE ) {
+            $redirect_url = 'webmail.php?right_frame=compose.php';
+        }
+    } else {
+        $redirect_url = 'webmail.php?right_frame=' . urldecode($session_expired_location);
     }
     unset($session_expired_location);
 }
