@@ -33,6 +33,10 @@ Version 1.4.8 - CVS
   - Removed HTTP Status header from signout page (#1424748).
   - Added command execution status check in SendMail delivery class (#1374174).
   - Added $sendmail_args configuration option (#1365779).
+  - Fixed resuming of compose when session expired while writing, and make
+    sure the code only sets those variables that are needed in compose and
+    are not already set. Thanks James Bercegay from GulfTech for pointing
+    this out.
 
 Version 1.4.7 - 4th July 2006
 -----------------------------
